[gd_scene load_steps=3 format=3 uid="uid://btcxk8wah2qrf"]

[ext_resource type="Script" uid="uid://c732s55dmrj80" path="res://scripts/ui/screens/EquipmentScreen.gd" id="1_h8q3j"]
[ext_resource type="PackedScene" uid="uid://cbw7xpldky1p7" path="res://scenes/ResourceDisplay.tscn" id="2_sj7ji"]

[node name="EquipmentScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_h8q3j")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.05, 0.08, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 80.0

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "‚Üê BACK"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EQUIPMENT MANAGEMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourceDisplay" parent="TopBar" instance=ExtResource("2_sj7ji")]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 1260.0
offset_bottom = 700.0
theme_override_constants/separation = 15

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="GodContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodLabel" type="Label" parent="MainContainer/LeftPanel/GodContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SELECT GOD"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/GodContainer"]
layout_mode = 2
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/LeftPanel/GodContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GodGrid" type="GridContainer" parent="MainContainer/LeftPanel/GodContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="VSeparator" type="VSeparator" parent="MainContainer"]
layout_mode = 2
modulate = Color(0.4, 0.4, 0.4, 1)

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="SelectedGodPanel" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainContainer/CenterPanel/SelectedGodPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
theme_override_constants/separation = 10

[node name="GodNameLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "No God Selected"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="StatsContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "CURRENT STATS"
horizontal_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="HPLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "HP:"

[node name="HPValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="AttackLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Attack:"

[node name="AttackValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="DefenseLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Defense:"

[node name="DefenseValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SpeedLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Speed:"

[node name="SpeedValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="CritRateLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Crit Rate:"

[node name="CritRateValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0%"
horizontal_alignment = 2

[node name="CritDmgLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Crit Damage:"

[node name="CritDmgValue" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/StatsContainer/StatsGrid"]
layout_mode = 2
text = "0%"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="EquipmentContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "EQUIPMENT SLOTS"
horizontal_alignment = 1

[node name="EquipmentSlotsGrid" type="GridContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="WeaponSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/WeaponSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "‚öî
WEAPON"
flat = true

[node name="ArmorSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="ArmorButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/ArmorSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "üõ°
ARMOR"
flat = true

[node name="HelmSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="HelmButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/HelmSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "ü™ñ
HELM"
flat = true

[node name="BootsSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="BootsButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/BootsSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "üë¢
BOOTS"
flat = true

[node name="AmuletSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="AmuletButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/AmuletSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "üîÆ
AMULET"
flat = true

[node name="RingSlot" type="Panel" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="RingButton" type="Button" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/EquipmentContainer/EquipmentSlotsGrid/RingSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
text = "üíç
RING"
flat = true

[node name="HSeparator3" type="HSeparator" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="SetBonusContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox"]
layout_mode = 2

[node name="SetBonusLabel" type="Label" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/SetBonusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SET BONUSES"
horizontal_alignment = 1

[node name="SetBonusList" type="VBoxContainer" parent="MainContainer/CenterPanel/SelectedGodPanel/VBox/SetBonusContainer"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="MainContainer"]
layout_mode = 2
modulate = Color(0.4, 0.4, 0.4, 1)

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="InventoryPanel" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainContainer/RightPanel/InventoryPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryLabel" type="Label" parent="MainContainer/RightPanel/InventoryPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "INVENTORY"
horizontal_alignment = 1

[node name="FilterContainer" type="HBoxContainer" parent="MainContainer/RightPanel/InventoryPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TypeFilter" type="OptionButton" parent="MainContainer/RightPanel/InventoryPanel/VBox/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "All Types"

[node name="RarityFilter" type="OptionButton" parent="MainContainer/RightPanel/InventoryPanel/VBox/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "All Rarities"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/RightPanel/InventoryPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="MainContainer/RightPanel/InventoryPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 2

[node name="HSeparator4" type="HSeparator" parent="MainContainer/RightPanel"]
layout_mode = 2
modulate = Color(0.4, 0.4, 0.4, 1)

[node name="EnhancementPanel" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnhancementLabel" type="Label" parent="MainContainer/RightPanel/EnhancementPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ENHANCEMENT"
horizontal_alignment = 1

[node name="SelectedEquipmentPanel" type="Panel" parent="MainContainer/RightPanel/EnhancementPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainContainer/RightPanel/EnhancementPanel/SelectedEquipmentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EquipmentNameLabel" type="Label" parent="MainContainer/RightPanel/EnhancementPanel/SelectedEquipmentPanel/VBox"]
layout_mode = 2
text = "No Equipment Selected"
horizontal_alignment = 1

[node name="EnhancementLevel" type="Label" parent="MainContainer/RightPanel/EnhancementPanel/SelectedEquipmentPanel/VBox"]
layout_mode = 2
text = "Level: 0"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="MainContainer/RightPanel/EnhancementPanel/SelectedEquipmentPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnhanceButton" type="Button" parent="MainContainer/RightPanel/EnhancementPanel/SelectedEquipmentPanel/VBox"]
layout_mode = 2
text = "Enhance (+1)"
